# r-airline-manager4

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: auth.rs  banking.rs  co2.rs  departure.rs  flights.rs  fuel.rs  hanger.rs  lounge.rs  main.rs  maintenance.rs  marketing.rs  operations.rs  profits.rs  purchase.rs  routes.rs  utilities.rs
