[package]
name = "airline-manager4"
description = "Airline Manager 4 Automation"
version = "0.1.0"
edition = "2021"
authors = ["Aingaran Elango <me@aingaran.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# for HTTP requests
reqwest = "0.11"

# used for extracting cookie header from response
# this cookie is then used to maintain the session
http = "0.2"

# used to extract information from the response html
# for extracting data based on css selectors
scraper = "0.12.0"
# for extracting data based on id
tl = "0.7.7"

# not used yet..
# may come in handly if and when i decide to work with json
serde_json = "1.0"

# For concurreny
futures = "0.3"                                     # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime

# for working with time
chrono = "0.4"

[[bin]]
name = "airline_manager4"
path = "src/main.rs"

[profile.release]
# strip = true      # Automatically strip symbols from the binary.
# opt-level = "z"   # Optimize for size.
strip = "debuginfo" # Strip only debug information.
opt-level = 3       # Optimize for performance.
lto = true          # enable LLVM's Link Time Optimisations.
codegen-units = 1   # Decreses compile time, but improves optimisations.
